--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -362,6 +362,7 @@
     <Content Include="Views\University\University.cshtml" />
     <Content Include="Views\Shared\404.cshtml" />
     <Content Include="Views\Faculty.cshtml" />
+    <Content Include="Views\StudyProgram\StudyProgram.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
