--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "axios": "^0.19.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
+        "clsx": "^1.0.4",
         "react": "^16.11.0",
         "react-dom": "^16.11.0"
     }
