--- a/packages.config
+++ b/packages.config
@@ -36,6 +36,8 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="Unity" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Mvc5" version="1.4.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
