--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Auth\SessionStorage.cs" />
     <Compile Include="Services\Statistics\IStatisticCalculator.cs" />
+    <Compile Include="Services\Statistics\IStatsBuilder.cs" />
     <Compile Include="Services\Statistics\StatisticCalculator.cs" />
     <Compile Include="Services\Statistics\StatsBuilder.cs" />
     <Compile Include="Services\Validator\ILoginDataValidator.cs" />
