Added stars and review text area
Added stars for overall rating and text area

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -284,6 +284,7 @@
     <Content Include="Assets\css\lib\bootstrap.css" />
     <Content Include="Assets\css\lib\bootstrap.min.css" />
     <Content Include="Assets\css\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Assets\css\review.css" />
     <Content Include="Assets\css\university.css" />
     <Content Include="Assets\css\universityList.css" />
     <Content Include="Assets\js\lib\bootstrap.js" />
