--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\Review\IReviewController.cs" />
     <Compile Include="Controllers\Review\IStudyProgramReviewController.cs" />
     <Compile Include="Controllers\Review\LecturerReviewController.cs" />
+    <Compile Include="Controllers\Review\ReviewController.cs" />
     <Compile Include="Controllers\Review\StudyProgramReviewController.cs" />
     <Compile Include="Controllers\StudyProgram\IStudyProgramController.cs" />
     <Compile Include="Controllers\StudyProgram\StudyProgramController.cs" />
@@ -284,6 +285,7 @@
     <Content Include="Assets\css\lib\bootstrap.css" />
     <Content Include="Assets\css\lib\bootstrap.min.css" />
     <Content Include="Assets\css\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Assets\css\review.css" />
     <Content Include="Assets\css\university.css" />
     <Content Include="Assets\css\universityList.css" />
     <Content Include="Assets\js\lib\bootstrap.js" />
@@ -381,6 +383,7 @@
     <Content Include="Views\Comparison\Comparison.cshtml" />
     <Content Include="Views\Faculty.cshtml" />
     <Content Include="Views\StudyProgram\StudyProgram.cshtml" />
+    <Content Include="Views\Review.cshtml" />
     <Content Include="Views\Course\Course.cshtml" />
   </ItemGroup>
   <ItemGroup>
