--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -213,6 +213,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\ApiController.cs" />
+    <Compile Include="Controllers\Api\ApiUniversityController.cs" />
     <Compile Include="Controllers\Course\CourseController.cs" />
     <Compile Include="Controllers\Course\ICourseController.cs" />
     <Compile Include="Controllers\Faculty\FacultyController.cs" />
@@ -306,6 +307,7 @@
     <Content Include="Assets\js\react\containers\ComparisonContainer.js" />
     <Content Include="Assets\js\react\service\IconClassResolver.js" />
     <Content Include="Assets\js\react\service\StatsProvider.js" />
+    <Content Include="Assets\js\review.js" />
     <Content Include="webpack.config.js" />
     <None Include="Assets\js\lib\jquery-3.3.1.intellisense.js" />
     <Content Include="Assets\js\lib\jquery-3.3.1.js" />
