--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -239,6 +239,10 @@
     <Compile Include="Migrations\201911031250302_Initial.Designer.cs">
       <DependentUpon>201911031250302_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911092006295_AddFile.cs" />
+    <Compile Include="Migrations\201911092006295_AddFile.Designer.cs">
+      <DependentUpon>201911092006295_AddFile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -247,6 +251,7 @@
     <Compile Include="Models\DB.cs" />
     <Compile Include="Models\Dormitory.cs" />
     <Compile Include="Models\Faculty.cs" />
+    <Compile Include="Models\UploadedFile.cs" />
     <Compile Include="Models\Lecturer.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Review.cs" />
@@ -387,7 +392,7 @@
     <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\uploads\" />
     <Folder Include="Assets\images\" />
   </ItemGroup>
   <ItemGroup>
@@ -411,6 +416,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201911031250302_Initial.resx">
       <DependentUpon>201911031250302_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911092006295_AddFile.resx">
+      <DependentUpon>201911092006295_AddFile.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
