--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -244,6 +244,10 @@
     <Compile Include="Migrations\201911092006295_AddFile.Designer.cs">
       <DependentUpon>201911092006295_AddFile.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911101001549_RemovePath.cs" />
+    <Compile Include="Migrations\201911101001549_RemovePath.Designer.cs">
+      <DependentUpon>201911101001549_RemovePath.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -415,6 +419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911092006295_AddFile.resx">
       <DependentUpon>201911092006295_AddFile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911101001549_RemovePath.resx">
+      <DependentUpon>201911101001549_RemovePath.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
