Added add university pop-up form
added add university

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -279,6 +279,7 @@
     <Compile Include="Tests\StatisticCalculatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\css\admin.css" />
     <Content Include="Assets\css\comparison.css" />
     <Content Include="Assets\css\course.css" />
     <Content Include="Assets\css\faculty.css" />
