Branch#119 Admin page view (#89)
* Added controller and partials

Added admin controller, views and link to admin view

* Added add university pop-up form

added add university

* added modal

changed pop-up window to modal

* partial university view with add university link

partial view with add university link

* fixed table width, added add university button

fixed table width, added button

* Added partial faculty view

partial faculty view with universtity select, faculty list, faculty add
button and edit/delete icons

* added study program partial

study program partial with university, faculty select, add button and
edit/delete buttons

* Lecturers view

added lecturers partial view with university, faculty, study program,
course selects, add button and edit/delete icons

* small fixes

small fixes like label container size and ect

* Course view

added course view with university, faculty and study program select, add
button, course list and edit/delete icons

* Layout fixes

fixed layout in lecturer, course and studyprogram views and tables

* code cleanup

sutvarkytas css failas ir likes kodas

* Pataisiau ka prazioplinau ;))

istrintas nereikalingas using is controllerio ir pakeistas labelis admin
puslapy

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -25,7 +25,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44392</IISExpressSSLPort>
+    <IISExpressSSLPort>44308</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -212,6 +212,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Admin\AdminController.cs" />
     <Compile Include="Controllers\Api\ApiController.cs" />
     <Compile Include="Controllers\Api\ApiStudyProgramController.cs" />
     <Compile Include="Controllers\Api\ApiUniversityController.cs" />
@@ -278,6 +279,7 @@
     <Compile Include="Tests\StatisticCalculatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\css\admin.css" />
     <Content Include="Assets\css\comparison.css" />
     <Content Include="Assets\css\course.css" />
     <Content Include="Assets\css\faculty.css" />
@@ -390,6 +392,12 @@
     <Content Include="Views\Review\Partials\_StudyProgramFormPartial.cshtml" />
     <Content Include="Views\Review\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
+    <Content Include="Views\Admin\Admin.cshtml" />
+    <Content Include="Views\Admin\Partials\_UniversityFormPartial.cshtml" />
+    <Content Include="Views\Admin\Partials\_FacultyFormPartial.cshtml" />
+    <Content Include="Views\Admin\Partials\_StudyProgramFormPartial.cshtml" />
+    <Content Include="Views\Admin\Partials\_CourseFormPartial.cshtml" />
+    <Content Include="Views\Admin\Partials\_LecturerFormPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
