--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Admin\AdminController.cs" />
     <Compile Include="Controllers\Api\ApiController.cs" />
+    <Compile Include="Controllers\Api\ApiFacultyController.cs" />
     <Compile Include="Controllers\Api\ApiStudyProgramController.cs" />
     <Compile Include="Controllers\Api\ApiUniversityController.cs" />
     <Compile Include="Controllers\Api\IApiController.cs" />
@@ -258,6 +259,7 @@
     <Compile Include="Models\Dormitory.cs" />
     <Compile Include="Models\Faculty.cs" />
     <Compile Include="Models\JSON\BasicModel.cs" />
+    <Compile Include="Models\JSON\FacultyDataModel.cs" />
     <Compile Include="Models\UploadedFile.cs" />
     <Compile Include="Models\Lecturer.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -394,8 +396,6 @@
     <Content Include="Views\Review\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
     <Content Include="Views\Admin\Admin.cshtml" />
-    <Content Include="Views\Admin\Partials\_UniversityFormPartial.cshtml" />
-    <Content Include="Views\Admin\Partials\_FacultyFormPartial.cshtml" />
     <Content Include="Views\Admin\Partials\_StudyProgramFormPartial.cshtml" />
     <Content Include="Views\Admin\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Admin\Partials\_LecturerFormPartial.cshtml" />
