--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Models\Faculty.cs" />
     <Compile Include="Models\JSON\BasicModel.cs" />
     <Compile Include="Models\JSON\FacultyDataModel.cs" />
+    <Compile Include="Models\JSON\StudyProgramDataModel.cs" />
     <Compile Include="Models\UploadedFile.cs" />
     <Compile Include="Models\Lecturer.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -396,7 +397,6 @@
     <Content Include="Views\Review\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
     <Content Include="Views\Admin\Admin.cshtml" />
-    <Content Include="Views\Admin\Partials\_StudyProgramFormPartial.cshtml" />
     <Content Include="Views\Admin\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Admin\Partials\_LecturerFormPartial.cshtml" />
   </ItemGroup>
