--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Controllers\Api\ApiController.cs" />
     <Compile Include="Controllers\Api\ApiCourseController.cs" />
     <Compile Include="Controllers\Api\ApiFacultyController.cs" />
+    <Compile Include="Controllers\Api\ApiLecturerController.cs" />
     <Compile Include="Controllers\Api\ApiStudyProgramController.cs" />
     <Compile Include="Controllers\Api\ApiUniversityController.cs" />
     <Compile Include="Controllers\Api\IApiController.cs" />
@@ -261,6 +262,7 @@
     <Compile Include="Models\Faculty.cs" />
     <Compile Include="Models\JSON\BasicModel.cs" />
     <Compile Include="Models\JSON\FacultyDataModel.cs" />
+    <Compile Include="Models\JSON\LecturerDataModel.cs" />
     <Compile Include="Models\JSON\StudyProgramDataModel.cs" />
     <Compile Include="Models\UploadedFile.cs" />
     <Compile Include="Models\Lecturer.cs" />
@@ -398,7 +400,6 @@
     <Content Include="Views\Review\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
     <Content Include="Views\Admin\Admin.cshtml" />
-    <Content Include="Views\Admin\Partials\_LecturerFormPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
