--- a/Auth.config
+++ b/Auth.config
@@ -1,4 +1,6 @@
 ﻿<appSettings>
   <add key="Auth:Fb:AppId" value="822016384882729"/>
   <add key="Auth:Fb:AppSecret" value="d831238d7e48ac5fcd484d43ff437872"/>
+  <add key="Auth:Google:ClientId" value="537714146943-v0fjnvp0djdjc1homrq4h8crope4728u.apps.googleusercontent.com"/>
+  <add key="Auth:Google:ClientSecret" value="_H9sPiP9AgJKkq9VrRPLKr8w"/>
 </appSettings>
