--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -430,6 +430,7 @@
     <Content Include="Views\Review\Partials\_CourseFormPartial.cshtml" />
     <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
     <Content Include="Views\Admin\Admin.cshtml" />
+    <Content Include="Views\Shared\_CompareButton.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
